apps/test123/test-7685/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-7685
  namespace: test123
  labels:
    app: test-7685
spec:
  selector:
    app: test-7685
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
